# dZENcode-Test-Task

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
app/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
comments_api/: asgi.py  settings.py  urls.py
vue_ui/: package-lock.json  package.json
vue_ui/src/: App.vue
vue_ui/src/api/: auth.ts  comments.ts
vue_ui/src/components/: CommentForm.vue  CommentItem.vue  Header.vue  LoginForm.vue  ReCaptcha.vue  RegistrationForm.vue
vue_ui/src/stores/: authStore.ts  commentsStore.ts
vue_ui/src/types/: auth.ts
vue_ui/src/utils/: api.ts  jwt.ts  storage.ts
vue_ui/src/views/: CommentDetail.vue  Home.vue  Login.vue  Register.vue
